--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
 
       matrix:
         version_branch: ['3.21']
-        version_minor_release: [0, 1, 2, 3, 4]
+        version_minor_release: [0, 1, 2, 3, 4, 5]
 
     steps:
       - name: Checkout out the codebase
@@ -171,7 +171,7 @@ jobs:
 
       matrix:
         version_branch: ['3.21']
-        version_minor_release: [0, 1, 2, 3, 4]
+        version_minor_release: [0, 1, 2, 3, 4, 5]
 
     steps:
       - name: Checkout out the codebase
